--- a/frontend/src/app/production/production-single/production-single.component.html
+++ b/frontend/src/app/production/production-single/production-single.component.html
@@ -1,24 +1,1 @@
-<ul class='list-group' *ngIf="production">
-    <li *ngIf="production.inQuestion" class='inQuestion list-group-item'>
-        <div *ngIf="production" >
-            <h4>Date: {{production.date}}</h4>
-            <h4>Job #: {{production.jobNumber}}</h4>
-            <h4>Shift: {{production.shift}}</h4>
-            <h4>Quantity: {{production.quantity}}</h4>
-            <h4>Machine: {{production.machine}}</h4>
-            <button class='btn btn-primary' routerLink="edit">Edit This Lot</button>
-            <button class='btn btn-primary pull-right' routerLink="../../{{production.jobNumber}}">Show Job Production</button>
-        </div>
-    </li>
-    <li *ngIf="!production.inQuestion" class='list-group-item'>
-        <div *ngIf="production" >
-            <h4>Date: {{production.date}}</h4>
-            <h4>Job #: {{production.jobNumber}}</h4>
-            <h4>Shift: {{production.shift}}</h4>
-            <h4>Quantity: {{production.quantity}}</h4>
-            <h4>Machine: {{production.machine}}</h4>
-            <button class='btn btn-primary' routerLink="edit">Edit This Lot</button>
-            <button class='btn btn-primary pull-right' routerLink="../../{{production.jobNumber}}">Show Job Production</button>
-        </div>
-    </li>
-</ul>
+<app-production-find-show  [inputId]="id"></app-production-find-show>
