--- a/frontend/src/app/production/production-edit/production-edit.component.html
+++ b/frontend/src/app/production/production-edit/production-edit.component.html
@@ -12,11 +12,11 @@
         class="form-control">
     </div>
     <div class="form-group">
-      <label for="job">Job</label>
+      <label for="jobNumber">Job</label>
       <select
-        formControlName='job'
+        formControlName='jobNumber'
         type="text" 
-        id="job" 
+        id="jobNumber" 
         class="form-control">
         <option 
           [selected]="job === production.jobNumber"
@@ -48,7 +48,11 @@
         formControlName='shift'
         id="shift" 
         class="form-control">
-        <option *ngFor="let shift of shifts">{{shift}}</option>
+        <option 
+          [selected]="shift === production.shift" 
+          *ngFor="let shift of shifts">
+            {{shift}}
+        </option>
       </select>
     </div>
     <br><br>
@@ -60,15 +64,6 @@
       >
         Edit Production
       </button>
-      <div></div>
-      <button 
-        type='button' 
-        class="btn btn-danger" 
-        (click)='onDelete()'
-      >
-        Delete
-      </button>
-      <div></div>
       <button 
         type='button' 
         class='btn btn-danger' 
