--- a/frontend/src/app/production/production-list/production-list.component.css
+++ b/frontend/src/app/production/production-list/production-list.component.css
@@ -2,12 +2,13 @@ h4 {
     text-align: center;
 }
 li {
+    margin: 10px 10px 10px 10px;
     border: solid;
     border-color: blue;
 }
 .grid { 
     display: grid;
-    grid-template-columns: 20% 15% 30% 5% 30%;
+    grid-template-columns: 50% 50%;
 }
 
 .inQuestion{
