--- a/frontend/src/app/shared/calender/calender.component.html
+++ b/frontend/src/app/shared/calender/calender.component.html
@@ -1,6 +1,7 @@
 <div>
   <div *ngIf="auth.user" class="container">
     <h3>{{welcome}}</h3><br>
+    <h3> {{set}}</h3>
     <br>
     <div class="row">
       <form (ngSubmit)='changeDate()' #newMonth="ngForm">
