--- a/frontend/src/app/hourly/hourly-edit/hourly-edit.component.html
+++ b/frontend/src/app/hourly/hourly-edit/hourly-edit.component.html
@@ -1,15 +1,17 @@
+<meta name="viewport" content="width=600">
 <div *ngIf="!canInput">
   <h1>You can only edit your own hourly lots!</h1>
 </div>
 <form *ngIf="canInput && editHourlyForm" [formGroup]="editHourlyForm" (ngSubmit)='onSubmit()'>
   <div class='form-group'>
     <div class="form-group">
-      <label for="quantity">Hard Quantity</label>
+      <h5 for="quantity">Hard Quantity</h5>
       <input 
-        formControlName='quantity'
-        type="number" 
-        id="quantity" 
-        class="form-control">
+        formControlName = 'quantity'
+        type = "number" 
+        id = "quantity" 
+        class = "form-control"
+        (change)="onChange()">
     </div>
     <div class="form-group">
       <label for="counterQuantity">Counter Quantity</label>
@@ -19,37 +21,12 @@
         class="form-control">
     </div>
     <div class="form-group">
-      <label for="jobNumber">Job</label>
-      <input 
-        formControlName='jobNumber'
-        type="text" 
-        id="jobNumber" 
-        class="form-control">
-    </div>
-    <div class="form-group">
-      <label for="date">Date</label>
-      <input 
-        type="date" 
-        id="date" 
-        class="form-control"
-        formControlName='date'>
-    </div>
-    <div class="form-group">
       <label for="time">Time</label>
       <input 
         type="time" 
         id="time" 
         class="form-control"
         formControlName='time'>
-    </div>
-    <div class="form-group">
-      <label for="machine">Machine</label>
-      <select 
-        formControlName='machine'
-        id="machine" 
-        class="form-control">
-        <option *ngFor = "let machine of machines">{{machine.machine}}</option>
-      </select>
     </div>
     <br>
     <div class="grid">
@@ -58,16 +35,7 @@
         type="submit"
         [disabled]="!editHourlyForm.valid"
       >
-      Edit Hourly</button>
-      <div></div>
-      <button 
-        type='button' 
-        class="btn btn-danger" 
-        (click)='onDelete()'
-      >
-        Delete
-      </button>
-      <div></div>
+      Edit</button>
       <button 
         type='button' 
         class='btn btn-danger pull-right' 
