--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -1,12 +1,16 @@
 <li class=list-group-item *ngFor="let lot of hourly; let i = index" >
-    <div>
+    <div *ngIf="!editMulti[i]">
         <h5>Time: <br><strong>{{lot.time}}</strong><br>
         Job #: <br><strong>{{lot.jobNumber}}</strong><br>
         Operation #: <br><strong>{{lot.opNumber}}</strong><br>
         Quantity: <br><strong>{{lot.quantity}}</strong>
         <div *ngIf="lot.counterQuantity">Counter: <br><strong>{{lot.counterQuantity}}</strong></div></h5>
         <div class="grid">
-            <button class='btn btn-primary' routerLink="edit/{{lot.id}}">Edit</button>
+            <button class='btn btn-primary' (click)="onEdit(i)">Edit</button>
+            <button class='btn btn-danger' (click)="onDelete(lot.id)">Delete</button>
         </div>
+    </div>
+    <div *ngIf="editMulti[i]">
+        <app-hourly-edit [id]="lot.id"></app-hourly-edit>
     </div>
 </li>
