--- a/frontend/src/app/hourly/hourly-show/hourly-show.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show.component.html
@@ -6,8 +6,8 @@
         <li class ="list-group-item" *ngFor="let mach of machines; let i=index">
             <ul *ngIf="machines" class="list-group">
                 <h2>{{mach.machine}}</h2>
-                <h3>{{mach.jobNumber}}</h3>
-                <div *ngIf="mach.jobNumber !== 'None' && mach.opNumber !== 'None'" class="btn-grid">
+                <h3>{{mach.currentJob}}</h3>
+                <div *ngIf="mach.currentOp !== 'None'" class="btn-grid">
                     <button 
                         *ngIf="!hourServ.quick[i]" 
                         class="btn btn-info" 
@@ -16,7 +16,7 @@
                         Quick Input
                     </button>
                 </div>
-                <div class="btn-grid" *ngIf="mach.jobNumber !=='None' && mach.opNumber === 'None'">
+                <div class="btn-grid" *ngIf="mach.currentOp === 'None'">
                     <button 
                         *ngIf="!hourServ.quick[i]" 
                         class="btn btn-success" 
@@ -25,24 +25,11 @@
                         Set Job
                     </button>                    
                 </div>
-                <div class="btn-grid" *ngIf="mach.jobNumber ==='None'">
-                    <button 
-                        *ngIf="!hourServ.quick[i]" 
-                        class="btn btn-success" 
-                        (click)="quickInput(i)"
-                    >
-                        Set Job
-                    </button>                    
-                </div>
-                <div *ngIf="hourServ.quick[i] && mach.jobNumber !=='None' && mach.opNumber !== 'None'">
+                <div *ngIf="hourServ.quick[i] && mach.currentOp !== 'None'">
                     <app-hourly-new-short [index]="i">
                     </app-hourly-new-short>     
                 </div>
-                <div *ngIf="hourServ.quick[i] && mach.jobNumber ==='None'">
-                    <app-hourly-set-job [index]="i">
-                    </app-hourly-set-job>     
-                </div>
-                <div *ngIf="hourServ.quick[i] && mach.jobNumber !=='None' && mach.opNumber === 'None'">
+                <div *ngIf="hourServ.quick[i] && mach.currentOp ==='None'">
                     <app-hourly-set-job [index]="i">
                     </app-hourly-set-job>     
                 </div>
