--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.css
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.css
@@ -6,3 +6,15 @@
 h5{
     text-align: center;
 }
+
+button{
+    font-size: auto;
+}
+
+@media only screen and (max-width: 768px) {
+    button{
+        font-size: 9px;
+        font-weight: 600;
+    }
+}
+
