--- a/frontend/src/app/production/production-single/production-single.component.html
+++ b/frontend/src/app/production/production-single/production-single.component.html
@@ -1,1 +1,4 @@
 <app-production-find-show  [inputId]="id"></app-production-find-show>
+<div class="grid">
+    <button (click)="onDelete()" class="btn btn-danger"> Delete This Lot</button>
+</div>
