--- a/frontend/src/app/hourly/hourly-edit/hourly-edit.component.css
+++ b/frontend/src/app/hourly/hourly-edit/hourly-edit.component.css
@@ -15,3 +15,18 @@ h5{
 input{
     height: 22px
 }
+
+
+@media only screen and (max-width: 768px) {
+    button{
+        font-size: 9px;
+        font-weight: 600;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    button{
+        font-size: 7px;
+        font-weight: 600;
+    }
+}
