--- a/frontend/src/app/machine/machine-edit/machine-edit.component.html
+++ b/frontend/src/app/machine/machine-edit/machine-edit.component.html
@@ -33,7 +33,7 @@
       </select>        
     </div>
       <br><br>
-      <div class="grid">
+      <div class="grid2">
         <button 
           class="btn btn-success" 
           type="submit"
