--- a/frontend/src/app/shared/tutorial/tutorial.component.html
+++ b/frontend/src/app/shared/tutorial/tutorial.component.html
@@ -39,7 +39,7 @@
 </h4>
 <h4 *ngIf="production" class="centered">
   After adding <a routerLink="/production/new">Multiple Production Lots</a> for one job, the 
-  <a routerLink="/production/{{job}}">Production By Job</a> page will show total parts to 
+  <a routerLink="/production/job={{job}}">Production By Job</a> page will show total parts to 
   date for the job.
 <br>
 </h4>
