--- a/frontend/src/app/hourly/hourly-edit/hourly-edit.component.css
+++ b/frontend/src/app/hourly/hourly-edit/hourly-edit.component.css
@@ -16,11 +16,16 @@ input{
     height: 22px
 }
 
+button{
+    margin: 0px 5px 0px 5px;
+}
+
 
 @media only screen and (max-width: 768px) {
     button{
         font-size: 9px;
         font-weight: 600;
+        margin: auto;
     }
 }
 
@@ -28,5 +33,6 @@ input{
     button{
         font-size: 7px;
         font-weight: 600;
+        margin: auto;
     }
 }
