--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.css
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.css
@@ -9,12 +9,14 @@ h5{
 
 button{
     font-size: auto;
+    margin: 0px 5px 0px 5px;
 }
 
 @media only screen and (max-width: 768px) {
     button{
         font-size: 9px;
         font-weight: 600;
+        margin: auto;
     }
 }
 
