--- a/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
+++ b/frontend/src/app/hourly/hourly-show/hourly-show-each/hourly-show-each.component.html
@@ -1,4 +1,4 @@
-<li class=list-group-item *ngFor="let lot of hourly; let i = index" >
+<li class="list-group-item" *ngFor="let lot of hourly; let i = index" >
     <div *ngIf="!editMulti[i]">
         <h5>Time: <br><strong>{{lot.time}}</strong><br>
         Job #: <br><strong>{{lot.jobNumber}}</strong><br>
