--- a/frontend/src/app/machine/machine-edit/machine-edit.component.css
+++ b/frontend/src/app/machine/machine-edit/machine-edit.component.css
@@ -3,6 +3,11 @@
     grid-template-columns: 50% 50%;
 }
 
+.grid2 { 
+    display: grid;
+    grid-template-columns: 100%;
+}
+
 input.ng-invalid.ng-touched {
     border: 1px solid red;
 }
