--- a/frontend/src/app/shared/days/days-hourly/days-hourly.component.css
+++ b/frontend/src/app/shared/days/days-hourly/days-hourly.component.css
@@ -1,3 +1,50 @@
-h4{
+li {
+    border: solid;
+    border-color: blue;
+}
+
+h5 {
     text-align: center;
+}
+
+h4 {
+    text-align: center;
+}
+
+h3{
+    text-align: center;
+    line-height: 10%;
+}
+
+h2{
+    text-align: center;
+    line-height: 100%;
+    font-weight: 600;
+    line-break: auto;
+}
+
+h1{
+    text-align: center;
+}
+
+li {
+    border: solid;
+    border-color: black;
+}
+
+.mach-grid{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+.btn-grid{
+    display: grid;
+    grid-template-columns: 100%;
+}
+
+
+@media only screen and (max-width: 768px) {
+    h2{
+        word-wrap: break-word;
+    }
 }
