--- a/frontend/src/app/machine/machine-edit/machine-edit.component.css
+++ b/frontend/src/app/machine/machine-edit/machine-edit.component.css
@@ -15,3 +15,20 @@ input.ng-invalid.ng-touched {
 h3{
     text-align: center;
 }
+
+.mobile {
+    display: none;
+    visibility: hidden;
+}
+
+@media screen and (max-width: 900px) {
+    .separator {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobile { 
+        visibility: visible;
+        display: initial;
+    }
+}
