--- a/frontend/src/app/part/part-find/part-find-show/part-find-show.component.html
+++ b/frontend/src/app/part/part-find/part-find-show/part-find-show.component.html
@@ -5,7 +5,7 @@
         <h3>Part #: {{part.partNumber}}</h3>
         <br><br>
         <div class="grid">
-          <button class='btn btn-danger' (click)="onDelete(part.partNumber, part.id)">Delete Part</button>
+          <button class='btn btn-danger' (click)="onDelete(part.partNumber)">Delete Part</button>
         </div>
       </li>
     </ul>
