Updated functionality for operations that include a '/', and production 'job production' button label and functionality changed to 'job/op'

--- a/frontend/src/app/production/production-find/production-find-show/production-find-show.component.html
+++ b/frontend/src/app/production/production-find/production-find-show/production-find-show.component.html
@@ -20,7 +20,7 @@
                     <h4>Machine: <strong>{{lot.machine}}</strong></h4>
                 </div>
                 <div class='grid'>
-                    <button class='btn btn-info pull-right' routerLink="/production/job={{lot.jobNumber}}">Job <br> Production</button>
+                    <button class='btn btn-info pull-right' routerLink="/production/op={{lot.opNumber}}&job={{lot.jobNumber}}">Job/Op <br> Production</button>
                     <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Day <br> Production</button>
                 </div>
                 <br>
@@ -40,7 +40,7 @@
                     <h4>Machine: <strong>{{lot.machine}}</strong></h4>
                 </div>
                 <div class='grid'>
-                    <button class='btn btn-info pull-right' routerLink="/production/job={{lot.jobNumber}}">Job <br> Production</button>
+                    <button class='btn btn-info pull-right' routerLink="/production/op={{lot.opNumber}}&job={{lot.jobNumber}}">Job/Op <br> Production</button>
                     <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Day <br> Production</button>
                 </div>
                 <br>
@@ -68,7 +68,7 @@
             <h4>Machine: <strong>{{singleProd.machine}}</strong></h4>
         </div>
         <div class='grid'>
-            <button class='btn btn-info pull-right' routerLink="/production/job={{singleProd.jobNumber}}">Job <br> Production</button>
+            <button class='btn btn-info pull-right' routerLink="/production/op={{singleProd.opNumber}}&job={{singleProd.jobNumber}}">Job/Op <br> Production</button>
             <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Day <br> Production</button>
         </div>
         <br>
@@ -88,7 +88,7 @@
             <h4>Machine: <strong>{{singleProd.machine}}</strong></h4>
         </div>
         <div class='grid'>
-            <button class='btn btn-info pull-right' routerLink="/production/job={{singleProd.jobNumber}}">Job <br> Production</button>
+            <button class='btn btn-info pull-right' routerLink="/production/op={{singleProd.opNumber}}&job={{singleProd.jobNumber}}">Job/Op <br> Production</button>
             <button class='btn btn-primary pull-right' routerLink="/day/{{dayServ.dates[i]}}">Day <br> Production</button>
         </div>
         <br>
