--- a/frontend/src/app/hourly/hourly-edit/hourly-edit.component.html
+++ b/frontend/src/app/hourly/hourly-edit/hourly-edit.component.html
@@ -12,14 +12,14 @@
         class = "form-control">
     </div>
     <div class="form-group">
-      <label for="counterQuantity">Counter Quantity</label>
+      <h5 for="counterQuantity">Counter Quantity</h5>
       <input 
         formControlName='counterQuantity'
         id="counterQuantity" 
         class="form-control">
     </div>
     <div class="form-group">
-      <label for="time">Time</label>
+      <h5 for="time">Time</h5>
       <input 
         type="time" 
         id="time" 
