--- a/frontend/src/app/job/job-ops/job-ops-edit/job-ops-edit.component.html
+++ b/frontend/src/app/job/job-ops/job-ops-edit/job-ops-edit.component.html
@@ -36,7 +36,7 @@
         type="number" 
       >
     </div>
-    <div class="grid">
+    <div class="grid separator">
       <button 
         class="btn btn-success" 
         type="submit"
@@ -47,6 +47,22 @@
       <button 
         type='button' 
         class='btn btn-danger pull-right' 
+        (click)='onCancel()'
+      >
+        Cancel
+      </button>
+    </div>
+    <div class="grid2">
+      <button 
+        class="btn btn-success mobile" 
+        type="submit"
+        [disabled]="!editOpForm.valid"
+      >
+        Update
+      </button>
+      <button 
+        type='button' 
+        class='btn btn-danger mobile' 
         (click)='onCancel()'
       >
         Cancel
