calculators functionally updating remaining quantity of related operations

--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -39,7 +39,7 @@
               <li><a routerLink='/jobs'>Jobs</a></li>
               <li><a routerLink='/production'>Production</a></li>
               <li><a routerLink='/hourly'>Hourly</a></li>
-              <li><a routerLink='/parts/calculator'>Length From Weight</a></li>
+              <li><a routerLink='/jobs/calculator'>Length From Weight</a></li>
             </ul>
           </li> 
         </ul>
